--- a/style.css
+++ b/style.css
@@ -5,10 +5,14 @@
     width: 850px;
 }
 
-.gridElement {
+.gridElement, .gridElementChanged {
     width: 50px;
     height: 50px;
     border: 1px solid black;
+}
+
+.gridElementChanged {
+    background-color: gray;
 }
 
 body {
