--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
+* {
+    box-sizing: border-box;
+}
+
 .grid {
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
+    height: 850px;
     width: 850px;
+    border: 1px solid black;   
 }
 
 .gridElement, .gridElementChanged {
-    width: 50px;
-    height: 50px;
     border: 1px solid black;
 }
 
@@ -22,6 +25,10 @@ body {
 
 .button {
     width: 200px;
-    height: 50px;
+    height: 50px;   
+}
+
+.boxRow {
+    display: flex;
 }
 
