--- a/style.css
+++ b/style.css
@@ -7,28 +7,32 @@
     flex-wrap: wrap;
     height: 850px;
     width: 850px;
-    border: 1px solid black;   
+    border: 1px solid black;  
+    order: 1; 
 }
 
-.gridElement, .gridElementChanged {
+.gridElement{
     border: 1px solid black;
-}
-
-.gridElementChanged {
-    background-color: gray;
 }
 
 body {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
 }
 
 .button {
     width: 200px;
-    height: 50px;   
+    height: 50px;  
 }
 
 .boxRow {
     display: flex;
 }
 
+.navbar {
+    display: flex;
+    gap: 20px;
+}
